--- a/Thesis_Misc/index.html
+++ b/Thesis_Misc/index.html
@@ -285,11 +285,11 @@
             <div class="col-md-12 column">
                 <div class="btn-group-horizontal btn-group" id = "SpiderSelection" class = "containerGroup">
 
-                    <div class="Btype slider">
-                        <span></span><input id="LostSlider" type="range" min=0 max=6 step=1 value=0 oninput="showValue(value, 'Lost')"><span></span>
-                        <span>Inundation Level :&nbsp;</span>
-                        <span id="Lostrange">0ft</span>
-                    </div>
+                    <!--<div class="Btype slider">-->
+                        <!--<span></span><input id="LostSlider" type="range" min=0 max=6 step=1 value=0 oninput="showValue(value, 'Lost')"><span></span>-->
+                        <!--<span>Inundation Level :&nbsp;</span>-->
+                        <!--<span id="Lostrange">0ft</span>-->
+                    <!--</div>-->
 
                     <button type="button" class="btn btn-default  Stype">Auto</button>
                     <button type="button" class="btn btn-default  Stype">Transit</button>
